--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "5.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "8.0.2",
     "sass": "^1.69.4",
