--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "5.0.1",
     "react-toastify": "8.0.2",
     "sass": "^1.69.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "with-router": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
